--- a/latestinfo.html
+++ b/latestinfo.html
@@ -117,7 +117,7 @@ An international team of scientists has proved that Mercury, our solar system's 
   <img src="mars1234.jpg"width="250" height="250"><h2>Mars</h2><h3>An international team of researchers with NASA's InSight mission located four new craters created by impacts on the surface of Mars. Using data from a seismometer and visuals acquired from the Mars Reconnaissance Orbiter, the team successfully calculated and confirmed the impact locations. This is the first time that researchers have been able to capture the dynamics of an impact on Mars.</h3>
   </div>
   <div class="clearfix">
-  <img src="jupiter123.png"width="250"  height="200"><h2>Jupiter</h2><h3>Astronauts have discovered 12 new moons of Jupiter!! Astronauts is taking the total number of natural satellites revolving around the Gas Giant to 92. Now Jupiter, which is the biggest planet in the solar system, has the most number of moons.</h3>
+  <img src="Jupiter123.png"width="250"  height="200"><h2>Jupiter</h2><h3>Astronauts have discovered 12 new moons of Jupiter!! Astronauts is taking the total number of natural satellites revolving around the Gas Giant to 92. Now Jupiter, which is the biggest planet in the solar system, has the most number of moons.</h3>
   </div>
   <div class="clearfix">
   <img src="saturn123.jpg"width="250" height="250"><h2>Saturn</h2><h3>Alien life could be found on Saturn ice moon.Researchers have long speculated that alien bacteria may live on Enceladus, which is one of the planet’s 83 moons, but they did not have definitive answers</h3>
