--- a/planets.html
+++ b/planets.html
@@ -71,7 +71,7 @@ body {
                     </div>
             <div class="clearfix">
                  <img src="venus.jpg">
-                    <a href="Venus.html">
+                    <a href="venus.html">
                     <h2>Venus</h2>
                     <h3>Venus is the second planet from the
                         Sun. It is sometimes called Earth's "sister" or "twin" planet as it is almost as large and has a similar composition. As an interior planet to Earth, Venus appears in Earth's sky never far from the Sun, either as morning star or evening star. </h3>
